fixed issues with audioviewer, hide scrollbars of the window.

--- a/src/styles.css
+++ b/src/styles.css
@@ -11,7 +11,7 @@ body {
     flex-direction: column;
     min-height: 100vh;
     height: 100%;
-    overflow: -moz-hidden-unscrollable;
+    overflow: hidden;
 }
 
 main {
